feat: Update neovim project page.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/competition.mdx
+++ b/src/content/project/competition.mdx
@@ -23,6 +23,7 @@ import Competition from "../../components/Competition.astro";
     image="/project/20230216125357.png"
     compe_url="https://www.kaggle.com/competitions/open-problems-multimodal"
     github_url="https://github.com/IMOKURI/kaggle-multimodal-single-cell-integration"
+    solution_url="/blog/2022/11/kaggle-multimodal-single-cell-integration/"
     />
 
 </div>
