--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -7,7 +7,7 @@ description: "業務での担当プロジェクトの公開事例です。"
 ## Solution
 
 - [HPE Swarm Learning](https://www.hpe.com/jp/ja/solutions/artificial-intelligence/swarm-learning.html)
-    - [GitHub - HPE Swarm Learning](https://github.com/HewlettPackard/swarm-learning)
+  [![HewlettPackard/swarm-learning - GitHub](https://gh-card.dev/repos/HewlettPackard/swarm-learning.svg?fullname=)](https://github.com/HewlettPackard/swarm-learning)
     - [HPE Swarm Learning とは](/blog/2022/06/hpe-swarm-learning-intro/)
     - [HPE Swarm Learning インストール](/blog/2022/06/hpe-swarm-learning-install/)
     - [HPE Swarm Learning 使い方](/blog/2022/06/hpe-swarm-learning-how-to-use/)
