feat: Add ice-cube compe.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/competition.mdx
+++ b/src/content/project/competition.mdx
@@ -5,6 +5,21 @@ description: "コンペの資産を残す場所です。"
 ---
 import Competition from "../../components/Competition.astro";
 
+## 2023年
+
+<div class="grid lg:grid-cols-2 gap-3">
+
+<Competition
+    title="IceCube - Neutrinos in Deep Ice 🥉"
+    description="テーブルデータ、グラフデータ、時系列データ、回帰"
+    image="/project/233083637-0c4127c3-86e9-4850-8c1c-ed7eb83c6985.png"
+    compe_url="https://www.kaggle.com/competitions/icecube-neutrinos-in-deep-ice"
+    github_url="https://github.com/IMOKURI/kaggle-ice-cube"
+    />
+
+</div>
+
+
 ## 2022年
 
 <div class="grid lg:grid-cols-2 gap-3">
