feat: add link to ITMedia promotion.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -17,6 +17,10 @@ description: "業務での担当プロジェクトの公開事例です。"
 
 ## Project
 
+### 2023年
+
+- [Kaggle Masterのエンジニアと考える、企業におけるAI開発の“真の”課題と解決策](https://atmarkit.itmedia.co.jp/ait/articles/2305/19/news004.html)
+
 ### 2022年
 
 - [群馬大学様 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX](https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html)
