--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -4,16 +4,12 @@ slug: project
 description: "業務での担当プロジェクトの公開事例です。"
 ---
 
-## Solution
+## Event
 
-- [HPE Swarm Learning](https://www.hpe.com/jp/ja/solutions/artificial-intelligence/swarm-learning.html)
-  [![HewlettPackard/swarm-learning - GitHub](https://gh-card.dev/repos/HewlettPackard/swarm-learning.svg?fullname=)](https://github.com/HewlettPackard/swarm-learning)
-    - [HPE Swarm Learning とは](/blog/2022/06/hpe-swarm-learning-intro/)
-    - [HPE Swarm Learning インストール](/blog/2022/06/hpe-swarm-learning-install/)
-    - [HPE Swarm Learning 使い方](/blog/2022/06/hpe-swarm-learning-how-to-use/)
-    - [非中央集権の連合学習 - Decentralized Federated Learning with Blockchain](https://speakerdeck.com/imokuri/decentralized-federated-learning-with-blockchain)
+### 2023年
 
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/666f756252ab4a86bc560bfa4976ca2d" title="Decentralized Federated Learning with Blockchain" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
+- [HPE Discover More 東京 2023 - AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践](https://www.hpe.com/jp/ja/events/discover-more-tokyo.html)
+- [HPE HPC & AI フォーラム 2023 オンライン - 大規模言語モデル最前線！- HPE MLDEでLLMトレーニングをしてみた -](https://h50146.www5.hpe.com/events/seminars/info/hpcai2023.html)
 
 ## Project
 
@@ -24,3 +20,14 @@ description: "業務での担当プロジェクトの公開事例です。"
 ### 2022年
 
 - [群馬大学様 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX](https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html)
+
+## Solution
+
+- [HPE Swarm Learning](https://www.hpe.com/jp/ja/solutions/artificial-intelligence/swarm-learning.html)
+  [![HewlettPackard/swarm-learning - GitHub](https://gh-card.dev/repos/HewlettPackard/swarm-learning.svg?fullname=)](https://github.com/HewlettPackard/swarm-learning)
+    - [HPE Swarm Learning とは](/blog/2022/06/hpe-swarm-learning-intro/)
+    - [HPE Swarm Learning インストール](/blog/2022/06/hpe-swarm-learning-install/)
+    - [HPE Swarm Learning 使い方](/blog/2022/06/hpe-swarm-learning-how-to-use/)
+    - [非中央集権の連合学習 - Decentralized Federated Learning with Blockchain](https://speakerdeck.com/imokuri/decentralized-federated-learning-with-blockchain)
+
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/666f756252ab4a86bc560bfa4976ca2d" title="Decentralized Federated Learning with Blockchain" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
