feat: update activity.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -11,11 +11,17 @@ description: "業務での担当プロジェクトの公開事例です。"
 - [HPE Discover More 東京 2023 - AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践](https://www.hpe.com/jp/ja/events/discover-more-tokyo.html)
 - [HPE HPC & AI フォーラム 2023 オンライン - 大規模言語モデル最前線！- HPE MLDEでLLMトレーニングをしてみた -](https://h50146.www5.hpe.com/events/seminars/info/hpcai2023.html)
 
-## Project
+## Media
+
+### 2024年
+
+- [知っておきたい「AIモデル開発」の裏側　専門家が考える“成功への近道”とは？](https://techtarget.itmedia.co.jp/tt/news/2403/07/news02.html)
 
 ### 2023年
 
 - [Kaggle Masterのエンジニアと考える、企業におけるAI開発の“真の”課題と解決策](https://atmarkit.itmedia.co.jp/ait/articles/2305/19/news004.html)
+
+## Project
 
 ### 2022年
 
