feat: add content
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -15,6 +15,7 @@ description: "業務での担当プロジェクトの公開事例です。"
 
 ### 2024年
 
+- [データ&AIスペシャリストの道を切り開く──最先端技術の追求を支えるHPEの魅力](https://www.talent-book.jp/hpe/stories/55214)
 - [知っておきたい「AIモデル開発」の裏側　専門家が考える“成功への近道”とは？](https://techtarget.itmedia.co.jp/tt/news/2403/07/news02.html)
 
 ### 2023年
