feat: add event info
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -6,6 +6,10 @@ description: "業務での担当プロジェクトの公開事例です。"
 
 ## Event
 
+### 2025年
+
+- [HPE Discover More AI 東京 2025 - AIの本格活用を加速させるPrivate LLM](http://www.hpe.com/jp/discover)
+
 ### 2023年
 
 - [HPE Discover More 東京 2023 - AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践](https://www.hpe.com/jp/ja/events/discover-more-tokyo.html)
