feat: update project
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/project/project.mdx
+++ b/src/content/project/project.mdx
@@ -10,6 +10,8 @@ description: "業務での担当プロジェクトの公開事例です。"
 
 - [HPE Discover More AI 東京 2025 - AIの本格活用を加速させるPrivate LLM](http://www.hpe.com/jp/discover)
 
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/32441673d6f24e75a9b119d597b3d7b6?slide=2" title="AIの本格活用を加速させるPrivate LLM" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
+
 ### 2023年
 
 - [HPE Discover More 東京 2023 - AIデータ分析プロジェクトの進め方とLLMカスタマイズの実践](https://www.hpe.com/jp/ja/events/discover-more-tokyo.html)
@@ -33,6 +35,10 @@ description: "業務での担当プロジェクトの公開事例です。"
 - [群馬大学様 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX](https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html)
 
 ## Solution
+
+- [Kuroco RAG on HPE](https://hpe-ta.github.io/public-docs/KurocoRAG%20on%20HPE%20-%20White%20Paper%20v1.0.pdf)
+
+<iframe src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf" width="600" height="332" frameborder="0" style="border:none;"></iframe>
 
 - [HPE Swarm Learning](https://www.hpe.com/jp/ja/solutions/artificial-intelligence/swarm-learning.html)
   [![HewlettPackard/swarm-learning - GitHub](https://gh-card.dev/repos/HewlettPackard/swarm-learning.svg?fullname=)](https://github.com/HewlettPackard/swarm-learning)
