feat: rename project to activity
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/activity/neovim.mdx
+++ b/src/content/activity/neovim.mdx
@@ -1,7 +1,7 @@
 ---
-title: Neovim関連
+title: Neovim
 slug: neovim
-description: "私の好きなエディタ Neovim 関連の活動です。"
+description: "私の好きなエディタ Neovim の活動です。"
 ---
 
 ## Dotfiles
