--- a/src/content/activity/competition.mdx
+++ b/src/content/activity/competition.mdx
@@ -1,7 +1,7 @@
 ---
-title: 機械学習コンペ参加記録
+title: Competition
 slug: competition
-description: "コンペの資産を残す場所です。"
+description: "機械学習コンペの参加記録です。"
 ---
 import Competition from "../../components/Competition.astro";
 
@@ -12,7 +12,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="IceCube - Neutrinos in Deep Ice 🥉"
     description="テーブルデータ、グラフデータ、時系列データ、回帰"
-    image="/project/233083637-0c4127c3-86e9-4850-8c1c-ed7eb83c6985.png"
+    image="/activity/233083637-0c4127c3-86e9-4850-8c1c-ed7eb83c6985.png"
     compe_url="https://www.kaggle.com/competitions/icecube-neutrinos-in-deep-ice"
     github_url="https://github.com/IMOKURI/kaggle-ice-cube"
     />
@@ -27,7 +27,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="Ubiquant Market Prediction"
     description="テーブルデータ、時系列データ、回帰、ピアソン相関係数"
-    image="/project/20230216140346.png"
+    image="/activity/20230216140346.png"
     compe_url="https://www.kaggle.com/competitions/ubiquant-market-prediction"
     github_url="https://github.com/IMOKURI/ubiquant-market-prediction"
     />
@@ -35,7 +35,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="Open Problems - Multimodal Single-Cell Integration 🥈"
     description="テーブルデータ、回帰、マルチラベル、ピアソン相関係数"
-    image="/project/20230216125357.png"
+    image="/activity/20230216125357.png"
     compe_url="https://www.kaggle.com/competitions/open-problems-multimodal"
     github_url="https://github.com/IMOKURI/kaggle-multimodal-single-cell-integration"
     solution_url="/blog/2022/11/kaggle-multimodal-single-cell-integration/"
@@ -51,7 +51,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="Cassava Leaf Disease Classification 🥈"
     description="画像データ、分類、正解率"
-    image="/project/20230216125413.png"
+    image="/activity/20230216125413.png"
     compe_url="https://www.kaggle.com/c/cassava-leaf-disease-classification"
     github_url="https://github.com/IMOKURI/Cassava-Leaf-Disease-Classification"
     solution_url="https://www.kaggle.com/c/cassava-leaf-disease-classification/discussion/220599"
@@ -60,7 +60,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="#11 [初心者歓迎! / 画像編] atmaCup"
     description="画像データ、分類、RMSE"
-    image="/project/20230216125447.png"
+    image="/activity/20230216125447.png"
     compe_url="https://www.guruguru.science/competitions/17"
     github_url="https://github.com/IMOKURI/atmacup11"
     />
@@ -68,7 +68,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="Hungry Geese 🥇"
     description="強化学習"
-    image="/project/20230216140356.png"
+    image="/activity/20230216140356.png"
     compe_url="https://www.kaggle.com/c/hungry-geese"
     github_url="https://github.com/IMOKURI/Hungry-Geese"
     solution_url="https://www.kaggle.com/c/hungry-geese/discussion/263690"
@@ -77,7 +77,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="医学論文の自動仕分けチャレンジ"
     description="自然言語処理、分類、F Beta Score"
-    image="/project/20230216125541.png"
+    image="/activity/20230216125541.png"
     compe_url="https://signate.jp/competitions/471"
     github_url="https://github.com/IMOKURI/signate-471"
     />
@@ -85,7 +85,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="chaii - Hindi and Tamil Question Answering 🥉"
     description="自然言語処理、QA、Jaccard score"
-    image="/project/20230216125608.png"
+    image="/activity/20230216125608.png"
     compe_url="https://www.kaggle.com/c/chaii-hindi-and-tamil-question-answering"
     github_url="https://github.com/IMOKURI/chaii-Hindi-and-Tamil-QA"
     />
@@ -93,7 +93,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="PetFinder.my - Pawpularity Contest 🥉"
     description="画像スコアリング、回帰、RMSE"
-    image="/project/20230216125628.png"
+    image="/activity/20230216125628.png"
     compe_url="https://www.kaggle.com/c/petfinder-pawpularity-score"
     github_url="https://github.com/IMOKURI/petfinder-pawpularity-score"
     />
@@ -108,7 +108,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="【第1回 Beginner限定コンペ】銀行の顧客ターゲティング"
     description="テーブルデータ、回帰、AUC"
-    image="/project/20230216125645.png"
+    image="/activity/20230216125645.png"
     compe_url="https://signate.jp/competitions/292"
     github_url="https://github.com/IMOKURI/signate-292"
     solution_url="/blog/2020/09/signate-292/"
@@ -117,7 +117,7 @@ import Competition from "../../components/Competition.astro";
 <Competition
     title="Mechanisms of Action (MoA) Prediction"
     description="テーブルデータ、分類、マルチラベル、Log Loss"
-    image="/project/20230216125707.png"
+    image="/activity/20230216125707.png"
     compe_url="https://www.kaggle.com/c/lish-moa"
     github_url="https://github.com/IMOKURI/kaggle-lish-moa"
     solution_url="/blog/2020/12/kaggle-lish-moa/"
