feat: add IMOKURI/snacks-picker-sonictemplate.nvim
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/activity/neovim.mdx
+++ b/src/content/activity/neovim.mdx
@@ -19,3 +19,5 @@ The dotfiles that can be installed by one command
 - [apyrori.nvim](https://github.com/IMOKURI/apyrori.nvim)
     - [Neovim のプラグインで Python の自動インポートをなんとかした。](/blog/2022/05/neovim-plugin-python-auto-import/)
       [![IMOKURI/apyrori.nvim - GitHub](https://gh-card.dev/repos/IMOKURI/apyrori.nvim.svg?fullname)](https://github.com/IMOKURI/apyrori.nvim)
+- [snacks-picker-sonictemplate.nvim](https://github.com/IMOKURI/snacks-picker-sonictemplate.nvim)
+  [![IMOKURI/snacks-picker-sonictemplate.nvim - GitHub](https://gh-card.dev/repos/IMOKURI/snacks-picker-sonictemplate.nvim.svg?fullname)](https://github.com/IMOKURI/snacks-picker-sonictemplate.nvim)
