fix: update iframe option
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/activity/solution.mdx
+++ b/src/content/activity/solution.mdx
@@ -8,7 +8,7 @@ description: "業務で関わったソリューションの記録です。"
 
 - [Kuroco RAG on HPE](https://hpe-ta.github.io/public-docs/KurocoRAG%20on%20HPE%20-%20White%20Paper%20v1.0.pdf)
 
-<iframe src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf" width="600" height="332" frameborder="0" style="border:none;"></iframe>
+<iframe src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf" frameborder="0" style="border:none;" style="width: 100%; height: auto; aspect-ratio: 600 / 332;"></iframe>
 
 ## HPE Swarm Learning
 
