feat: add kuroco rag white paper
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/activity/solution.mdx
+++ b/src/content/activity/solution.mdx
@@ -6,7 +6,8 @@ description: "業務で関わったソリューションの記録です。"
 
 ## Kuroco RAG
 
-- [Kuroco RAG on HPE](https://hpe-ta.github.io/public-docs/KurocoRAG%20on%20HPE%20-%20White%20Paper%20v1.0.pdf)
+- Kuroco RAG on HPE
+    - [White Paper](https://www.hpe.com/psnow/doc/a00146268jpn)
 
 <iframe src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf" frameborder="0" style="border:none;" style="width: 100%; height: auto; aspect-ratio: 600 / 332;"></iframe>
 
