--- a/src/content/data/llm-kv-cache-sizing.mdx
+++ b/src/content/data/llm-kv-cache-sizing.mdx
@@ -4,7 +4,7 @@ slug: llm-kv-cache-sizing
 description: "私がよく使うモデルのKV Cacheのサイズを試算しました。"
 ---
 
-updated: 2025-05-15
+updated: 2025-07-02
 
 
 [この記事](/blog/2025/05/llm-kv-cache-size/)に従って、LLMのKV Cacheのサイズを試算しました。
@@ -13,47 +13,47 @@ updated: 2025-05-15
 
 ### google/gemma-3-12b-it
 
-| 記号                           | 値               |
-|--------------------------------|------------------|
-| 2                              | 2                |
-| B                              | 1 (とする)       |
-| bytes/param                    | 2 (16 bit)       |
-| n<sub>layers</sub>             | 48               |
-| n<sub>kv_attention_heads</sub> | 8                |
-| d<sub>attention_heads</sub>    | 3840 // 16 = 240 |
-| context_length                 | 8k (とする)      |
-| KV Cache サイズ                | 2.8GB            |
+| 記号                | 値               |
+|---------------------|------------------|
+| 2                   | 2                |
+| B                   | 1 (とする)       |
+| bytes/param         | 2 (16 bit)       |
+| num_hidden_layers   | 48               |
+| num_key_value_heads | 8                |
+| head_size           | 3840 // 16 = 240 |
+| context_length      | 8k (とする)      |
+| KV Cache サイズ     | 2.8GB            |
 
 [google/gemma-3-12b-it (config.json)](https://huggingface.co/google/gemma-3-12b-it/blob/main/config.json)
 
 
 ### google/gemma-3-27b-it
 
-| 記号                           | 値               |
-|--------------------------------|------------------|
-| 2                              | 2                |
-| B                              | 1 (とする)       |
-| bytes/param                    | 2 (16 bit)       |
-| n<sub>layers</sub>             | 62               |
-| n<sub>kv_attention_heads</sub> | 16               |
-| d<sub>attention_heads</sub>    | 5376 // 32 = 168 |
-| context_length                 | 8k (とする)      |
-| KV Cache サイズ                | 5.1GB            |
+| 記号                | 値               |
+|---------------------|------------------|
+| 2                   | 2                |
+| B                   | 1 (とする)       |
+| bytes/param         | 2 (16 bit)       |
+| num_hidden_layers   | 62               |
+| num_key_value_heads | 16               |
+| head_size           | 5376 // 32 = 168 |
+| context_length      | 8k (とする)      |
+| KV Cache サイズ     | 5.1GB            |
 
 [google/gemma-3-27b-it (config.json)](https://huggingface.co/google/gemma-3-27b-it/blob/main/config.json)
 
 
 ### Qwen/Qwen3-32B
 
-| 記号                           | 値              |
-|--------------------------------|-----------------|
-| 2                              | 2               |
-| B                              | 1 (とする)      |
-| bytes/param                    | 2 (16 bit)      |
-| n<sub>layers</sub>             | 64              |
-| n<sub>kv_attention_heads</sub> | 8               |
-| d<sub>attention_heads</sub>    | 5120 // 64 = 80 |
-| context_length                 | 8k (とする)     |
-| KV Cache サイズ                | 1.25GB          |
+| 記号                | 値              |
+|---------------------|-----------------|
+| 2                   | 2               |
+| B                   | 1 (とする)      |
+| bytes/param         | 2 (16 bit)      |
+| num_hidden_layers   | 64              |
+| num_key_value_heads | 8               |
+| head_size           | 5120 // 64 = 80 |
+| context_length      | 8k (とする)     |
+| KV Cache サイズ     | 1.25GB          |
 
 [Qwen/Qwen3-32B (config.json)](https://huggingface.co/Qwen/Qwen3-32B/blob/main/config.json)
