feat: add PCAI project
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/content/activity/project.mdx
+++ b/src/content/activity/project.mdx
@@ -4,6 +4,11 @@ slug: project
 description: "担当プロジェクトの公開事例です。"
 ---
 
+## 2025年
+
+<iframe src="https://www.scsk.jp/news/2025/pdf/20250516i.pdf" frameborder="0" style="border:none;" style="width: 100%; height: auto; aspect-ratio: 600 / 332;"></iframe>
+
+
 ## 2022年
 
 - [群馬大学様 - AI人材育成とAI研究を加速、文理融合の新学部が挑むDX](https://www.hpe.com/jp/ja/customer-case-studies/services-gunma-u.html)
