--- a/src/content/activity/neovim.mdx
+++ b/src/content/activity/neovim.mdx
@@ -10,7 +10,7 @@ The dotfiles that can be installed by one command
 
 [![IMOKURI/dotfiles - GitHub](https://gh-card.dev/repos/IMOKURI/dotfiles.svg?fullname)](https://github.com/IMOKURI/dotfiles)
 
-## Plugin
+## Plugins
 
 - [line-number-interval.nvim](https://github.com/IMOKURI/line-number-interval.nvim)
   [![IMOKURI/line-number-interval.nvim - GitHub](https://gh-card.dev/repos/IMOKURI/line-number-interval.nvim.svg?fullname)](https://github.com/IMOKURI/line-number-interval.nvim)
