--- a/src/content/activity/event.mdx
+++ b/src/content/activity/event.mdx
@@ -8,7 +8,15 @@ description: "イベントでの講演の記録です。"
 
 - [HPE Discover More AI 東京 2025 - AIの本格活用を加速させるPrivate LLM](http://www.hpe.com/jp/discover)
 
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/32441673d6f24e75a9b119d597b3d7b6?slide=2" title="AIの本格活用を加速させるPrivate LLM" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
+<iframe
+  class="speakerdeck-iframe"
+  frameborder="0"
+  src="https://speakerdeck.com/player/32441673d6f24e75a9b119d597b3d7b6?slide=2"
+  title="AIの本格活用を加速させるPrivate LLM"
+  allowfullscreen="true"
+  style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;"
+  data-ratio="1.7777777777777777"
+></iframe>
 
 ## 2023年
 
