--- a/src/content/activity/project.mdx
+++ b/src/content/activity/project.mdx
@@ -6,8 +6,12 @@ description: "担当プロジェクトの公開事例です。"
 
 ## 2025年
 
-<iframe src="https://www.scsk.jp/news/2025/pdf/20250516i.pdf" frameborder="0" style="border:none;" style="width: 100%; height: auto; aspect-ratio: 600 / 332;"></iframe>
-
+<iframe
+  src="https://www.scsk.jp/news/2025/pdf/20250516i.pdf"
+  frameborder="0"
+  style="border:none;"
+  style="width: 100%; height: auto; aspect-ratio: 600 / 332;"
+></iframe>
 
 ## 2022年
 
