--- a/src/content/activity/solution.mdx
+++ b/src/content/activity/solution.mdx
@@ -7,15 +7,30 @@ description: "業務で関わったソリューションの記録です。"
 ## Kuroco RAG
 
 - Kuroco RAG on HPE
-    - [White Paper](https://www.hpe.com/psnow/doc/a00146268jpn)
+  - [White Paper](https://www.hpe.com/psnow/doc/a00146268jpn)
 
-<iframe src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf" frameborder="0" style="border:none;" style="width: 100%; height: auto; aspect-ratio: 600 / 332;"></iframe>
+<iframe
+  src="https://hpe-ta.github.io/public-docs/2501_Kuroco_RAG_A1_Panel_v1.pdf"
+  frameborder="0"
+  style="border:none;"
+  style="width: 100%; height: auto; aspect-ratio: 600 / 332;"
+></iframe>
 
 ## HPE Swarm Learning
 
 - [HPE Swarm Learning](https://www.hpe.com/jp/ja/solutions/artificial-intelligence/swarm-learning.html)
   [![HewlettPackard/swarm-learning - GitHub](https://gh-card.dev/repos/HewlettPackard/swarm-learning.svg?fullname=)](https://github.com/HewlettPackard/swarm-learning)
-    - [HPE Swarm Learning 関連の Blog 記事](/tag/HPE%20Swarm%20Learning/)
-    - [非中央集権の連合学習 - Decentralized Federated Learning with Blockchain](https://speakerdeck.com/imokuri/decentralized-federated-learning-with-blockchain)
+  - [HPE Swarm Learning 関連の Blog 記事](/tag/HPE%20Swarm%20Learning/)
+  - [非中央集権の連合学習 - Decentralized Federated Learning with Blockchain](https://speakerdeck.com/imokuri/decentralized-federated-learning-with-blockchain)
 
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/666f756252ab4a86bc560bfa4976ca2d" title="Decentralized Federated Learning with Blockchain" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586"></iframe>
+<iframe
+  class="speakerdeck-iframe"
+  frameborder="0"
+  src="https://speakerdeck.com/player/666f756252ab4a86bc560bfa4976ca2d"
+  title="Decentralized Federated Learning with Blockchain"
+  allowfullscreen="true"
+  mozallowfullscreen="true"
+  webkitallowfullscreen="true"
+  style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;"
+  data-ratio="1.78343949044586"
+></iframe>
