--- a/src/content/activity/competition.mdx
+++ b/src/content/activity/competition.mdx
@@ -6,9 +6,22 @@ description: "機械学習コンペの参加記録です。"
 
 import Competition from "../../components/Competition.astro"
 
+## 2025年
+
+<div class="grid 2xl:grid-cols-3 lg:grid-cols-2 gap-4">
+
+<Competition
+  title="CSIRO - Image2Biomass Prediction"
+  description="画像データ、回帰、マルチラベル"
+  image="/activity/20251111163405.png"
+  compe_url="https://www.kaggle.com/competitions/csiro-biomass"
+/>
+
+</div>
+
 ## 2023年
 
-<div class="grid lg:grid-cols-2 gap-3">
+<div class="grid 2xl:grid-cols-3 lg:grid-cols-2 gap-4">
 
 <Competition
   title="IceCube - Neutrinos in Deep Ice 🥉"
@@ -22,15 +35,7 @@ import Competition from "../../components/Competition.astro"
 
 ## 2022年
 
-<div class="grid lg:grid-cols-2 gap-3">
-
-<Competition
-  title="Ubiquant Market Prediction"
-  description="テーブルデータ、時系列データ、回帰、ピアソン相関係数"
-  image="/activity/20230216140346.png"
-  compe_url="https://www.kaggle.com/competitions/ubiquant-market-prediction"
-  github_url="https://github.com/IMOKURI/ubiquant-market-prediction"
-/>
+<div class="grid 2xl:grid-cols-3 lg:grid-cols-2 gap-4">
 
 <Competition
   title="Open Problems - Multimodal Single-Cell Integration 🥈"
@@ -41,52 +46,12 @@ import Competition from "../../components/Competition.astro"
   solution_url="/blog/2022/11/kaggle-multimodal-single-cell-integration/"
 />
 
-</div>
-
-## 2021年
-
-<div class="grid lg:grid-cols-2 gap-3">
-
 <Competition
-  title="Cassava Leaf Disease Classification 🥈"
-  description="画像データ、分類、正解率"
-  image="/activity/20230216125413.png"
-  compe_url="https://www.kaggle.com/c/cassava-leaf-disease-classification"
-  github_url="https://github.com/IMOKURI/Cassava-Leaf-Disease-Classification"
-  solution_url="https://www.kaggle.com/c/cassava-leaf-disease-classification/discussion/220599"
-/>
-
-<Competition
-  title="#11 [初心者歓迎! / 画像編] atmaCup"
-  description="画像データ、分類、RMSE"
-  image="/activity/20230216125447.png"
-  compe_url="https://www.guruguru.science/competitions/17"
-  github_url="https://github.com/IMOKURI/atmacup11"
-/>
-
-<Competition
-  title="Hungry Geese 🥇"
-  description="強化学習"
-  image="/activity/20230216140356.png"
-  compe_url="https://www.kaggle.com/c/hungry-geese"
-  github_url="https://github.com/IMOKURI/Hungry-Geese"
-  solution_url="https://www.kaggle.com/c/hungry-geese/discussion/263690"
-/>
-
-<Competition
-  title="医学論文の自動仕分けチャレンジ"
-  description="自然言語処理、分類、F Beta Score"
-  image="/activity/20230216125541.png"
-  compe_url="https://signate.jp/competitions/471"
-  github_url="https://github.com/IMOKURI/signate-471"
-/>
-
-<Competition
-  title="chaii - Hindi and Tamil Question Answering 🥉"
-  description="自然言語処理、QA、Jaccard score"
-  image="/activity/20230216125608.png"
-  compe_url="https://www.kaggle.com/c/chaii-hindi-and-tamil-question-answering"
-  github_url="https://github.com/IMOKURI/chaii-Hindi-and-Tamil-QA"
+  title="Ubiquant Market Prediction"
+  description="テーブルデータ、時系列データ、回帰、ピアソン相関係数"
+  image="/activity/20230216140346.png"
+  compe_url="https://www.kaggle.com/competitions/ubiquant-market-prediction"
+  github_url="https://github.com/IMOKURI/ubiquant-market-prediction"
 />
 
 <Competition
@@ -99,18 +64,57 @@ import Competition from "../../components/Competition.astro"
 
 </div>
 
-## 2020年
+## 2021年
 
-<div class="grid lg:grid-cols-2 gap-3">
+<div class="grid 2xl:grid-cols-3 lg:grid-cols-2 gap-4">
 
 <Competition
-  title="【第1回 Beginner限定コンペ】銀行の顧客ターゲティング"
-  description="テーブルデータ、回帰、AUC"
-  image="/activity/20230216125645.png"
-  compe_url="https://signate.jp/competitions/292"
-  github_url="https://github.com/IMOKURI/signate-292"
-  solution_url="/blog/2020/09/signate-292/"
+  title="chaii - Hindi and Tamil Question Answering 🥉"
+  description="自然言語処理、QA、Jaccard score"
+  image="/activity/20230216125608.png"
+  compe_url="https://www.kaggle.com/c/chaii-hindi-and-tamil-question-answering"
+  github_url="https://github.com/IMOKURI/chaii-Hindi-and-Tamil-QA"
 />
+
+<Competition
+  title="医学論文の自動仕分けチャレンジ"
+  description="自然言語処理、分類、F Beta Score"
+  image="/activity/20230216125541.png"
+  compe_url="https://signate.jp/competitions/471"
+  github_url="https://github.com/IMOKURI/signate-471"
+/>
+
+<Competition
+  title="Hungry Geese 🥇"
+  description="強化学習"
+  image="/activity/20230216140356.png"
+  compe_url="https://www.kaggle.com/c/hungry-geese"
+  github_url="https://github.com/IMOKURI/Hungry-Geese"
+  solution_url="https://www.kaggle.com/c/hungry-geese/discussion/263690"
+/>
+
+<Competition
+  title="#11 [初心者歓迎! / 画像編] atmaCup"
+  description="画像データ、分類、RMSE"
+  image="/activity/20230216125447.png"
+  compe_url="https://www.guruguru.science/competitions/17"
+  github_url="https://github.com/IMOKURI/atmacup11"
+/>
+
+<Competition
+  title="Cassava Leaf Disease Classification 🥈"
+  description="画像データ、分類、正解率"
+  image="/activity/20230216125413.png"
+  compe_url="https://www.kaggle.com/c/cassava-leaf-disease-classification"
+  github_url="https://github.com/IMOKURI/Cassava-Leaf-Disease-Classification"
+  solution_url="https://www.kaggle.com/c/cassava-leaf-disease-classification/discussion/220599"
+/>
+
+</div>
+
+## 2020年
+
+<div class="grid 2xl:grid-cols-3 lg:grid-cols-2 gap-4">
 
 <Competition
   title="Mechanisms of Action (MoA) Prediction"
@@ -119,6 +123,15 @@ import Competition from "../../components/Competition.astro"
   compe_url="https://www.kaggle.com/c/lish-moa"
   github_url="https://github.com/IMOKURI/kaggle-lish-moa"
   solution_url="/blog/2020/12/kaggle-lish-moa/"
+/>
+
+<Competition
+  title="【第1回 Beginner限定コンペ】銀行の顧客ターゲティング"
+  description="テーブルデータ、回帰、AUC"
+  image="/activity/20230216125645.png"
+  compe_url="https://signate.jp/competitions/292"
+  github_url="https://github.com/IMOKURI/signate-292"
+  solution_url="/blog/2020/09/signate-292/"
 />
 
 </div>
