feat: update resume a bit.
Signed-off-by: Yoshio Sugiyama <nenegi.01mo@gmail.com>

--- a/src/content/activity/resume.mdx
+++ b/src/content/activity/resume.mdx
@@ -19,7 +19,7 @@ description: "経歴や職務の紹介です。"
 データ&AI活用のトータルサポートを希望する顧客と、プラットフォームに強いHPEを結びつけるために、HPEメンバーのスキル向上に取り組み。
 
 ### プロジェクトへの貢献
-実際のデータ&AIプロジェクトに参画し、実績を作っていく。
+顧客のAI活用戦略を描き、PoC～本番導入までを伴走支援するなどの、実際のデータ&AIプロジェクトに参画し、実績を作っていく。
 
 ### ビジネス拡大に取り組み
 プロジェクトの実績を横展開したり、HPEのAIソリューションを顧客に訴求したりすることでビジネスの拡大に貢献。
