feat: NVIDIA-Certified Associate - Generative AI LLMs
Signed-off-by: Yoshio Sugiyama <nenegi.01mo@gmail.com>

--- a/src/content/activity/certification.mdx
+++ b/src/content/activity/certification.mdx
@@ -6,6 +6,7 @@ description: "これまでに取得した認定資格の記録です。"
 
 import TimeLine from "../../components/TimeLine.astro"
 
+<TimeLine title="NVIDIA-Certified Associate - Generative AI LLMs" date="2026/1" />
 <TimeLine title="NVIDIA-Certified Associate - AI Infrastructure and Operations" date="2025/7" />
 <TimeLine title="HPE Product Certified - AI and Machine Learning" date="2024/10" />
 <TimeLine title="Informatica Certified Professional - Cloud Data and Application Integration" date="2023/2" />
