--- a/src/content/activity/competition.mdx
+++ b/src/content/activity/competition.mdx
@@ -15,6 +15,7 @@ import Competition from "../../components/Competition.astro"
   description="画像データ、回帰、マルチラベル"
   image="/activity/20251111163405.png"
   compe_url="https://www.kaggle.com/competitions/csiro-biomass"
+  github_url="https://github.com/IMOKURI/kaggle-csiro-biomass"
 />
 
 </div>
